--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -243,6 +243,22 @@
     </div>
   </div>
  
+  <div class="team">
+    <h2>Our Work Culture And Farm</h2>
+    <div class="team_container">
+        <div class="team_video">
+            <video controls>
+                <!-- Add your video source here -->
+                <source src="images/cowvid.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="team_content">
+            <!-- Add your team member content here -->
+            <p>In Our farm every drop of milk embodies the pure essence of nature's bounty. Nestled in the heart of serene pastures, our journey begins with a genuine commitment to providing the freshest and most nourishing milk to your table. At our farm, ethical practices are our foundation. Our cows roam freely on open pastures, basking in sunlight and grazing on lush, natural grass. With a diet devoid of additives or artificial enhancers, our cows produce milk that's not only delicious but also brimming with essential nutrients. We take pride in our legacy of responsible farming. Since our inception, we've upheld a steadfast belief in the well-being of our cows and the quality of our milk. With every passing year, our dedication has only deepened, resulting in milk that is a true testament to our values.</p>
+        </div>
+    </div>
+</div>
 
 
 
@@ -295,13 +311,13 @@
                     </div>
             </div>
         </section>
-
     
 
-    
+
+
+
         <footer>
-            
-           
+        
             <div class="doc">
                 <h3>Documents</h3>
                 <a href="#">Privacy</a>|
