--- a/public/frontpage.css
+++ b/public/frontpage.css
@@ -1044,4 +1044,53 @@ footer p
 
 
 
-  
+  .team {
+    padding: 50px;
+}
+
+.team h2 {
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+    color: rgb(92, 0, 47);
+    font-size: 35px;
+    text-align: center;
+}
+
+.team .team_container {
+    display: flex;
+    flex-wrap: wrap; /* Ensure content wraps to the next line on smaller screens */
+}
+
+.team .team_container .team_video {
+    width: 100%;
+    max-width: 50%; /* On smaller screens, take full width or half of the screen */
+    padding: 20px;
+    box-sizing: border-box; /* Include padding in width calculation */
+}
+
+.team .team_container .team_video video {
+    width: 100%;
+    border: 8px solid rgb(161, 0, 83);
+    outline: none;
+}
+
+.team .team_container .team_content {
+    width: 100%;
+    max-width: 40%; /* On smaller screens, take full width or 40% of the screen */
+    padding: 20px;
+    margin-top: 1%;
+    font-size: 16px;
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+
+/* Media Queries for Responsive Design */
+@media (max-width: 768px) {
+    .team .team_container .team_video,
+    .team .team_container .team_content {
+        max-width: 100%; /* On screens smaller than 768px, take full width */
+    }
+    
+    .team .team_container .team_video {
+        margin-left: 0; /* Remove margin on smaller screens */
+    }
+}
+
