--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -259,7 +259,8 @@
       </div>
       <div class="team_content">
           <!-- Add your team member content here -->
-          <p>In Our farm every drop of milk embodies the pure essence of nature's bounty. Nestled in the heart of serene pastures, our journey begins with a genuine commitment to providing the freshest and most nourishing milk to your table. At our farm, ethical practices are our foundation. Our cows roam freely on open pastures, basking in sunlight and grazing on lush, natural grass. With a diet devoid of additives or artificial enhancers, our cows produce milk that's not only delicious but also brimming with essential nutrients. We take pride in our legacy of responsible farming. Since our inception, we've upheld a steadfast belief in the well-being of our cows and the quality of our milk. With every passing year, our dedication has only deepened, resulting in milk that is a true testament to our values.</p>
+          <p>In Our farm every drop of milk embodies the pure essence of nature's bounty. Nestled in the heart of serene pastures, our journey begins with a genuine commitment to providing the freshest and most nourishing milk to your table. At our farm, ethical practices are our foundation. Our cows roam freely on open pastures, basking in sunlight and grazing on lush, natural grass. With a diet devoid of additives or artificial enhancers, our cows produce milk that's not only delicious but also brimming with essential nutrients. We take pride in our legacy of responsible farming. Since our inception, we've upheld a steadfast belief in the well-being of our cows and the quality of our milk. resulting in milk that is a true testament to our values.</p>
+          <a href="https://calendly.com/ssumayya222/farm-visit" class="btn ">Schedule Farm Visit with Us</a>
       </div>
   </div>
 </div>
